--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 Chapter 10 - Starting with the basics/PIZZA2/.idea/
 
 Chapter 10 - Starting with the basics/PIZZA2/cmake-build-debug/
+
+Chapter 10 - Starting with the basics/PIZZA3/.idea/
+
+Chapter 10 - Starting with the basics/PIZZA3/cmake-build-debug/
