--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Chapter 10 - Starting with the basics/PIZZA2/cmake-build-debug/
 Chapter 10 - Starting with the basics/PIZZA3/.idea/
 
 Chapter 10 - Starting with the basics/PIZZA3/cmake-build-debug/
+
+Chapter 9 - What's A Program Anyway/HELLOW/.idea/
+
+Chapter 9 - What's A Program Anyway/HELLOW/cmake-build-debug/
