--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ Chapter 10 - Starting with the basics/PIZZA3/cmake-build-debug/
 Chapter 9 - What's A Program Anyway/HELLOW/.idea/
 
 Chapter 9 - What's A Program Anyway/HELLOW/cmake-build-debug/
+
+Chapter 12 - Controlling Flow/HANG/.idea/
+
+Chapter 12 - Controlling Flow/HANG/cmake-build-debug/
