--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ Chapter 9 - What's A Program Anyway/HELLOW/cmake-build-debug/
 Chapter 12 - Controlling Flow/HANG/.idea/
 
 Chapter 12 - Controlling Flow/HANG/cmake-build-debug/
+
+Chapter 12 - Controlling Flow/FACTOR/.idea/
+
+Chapter 12 - Controlling Flow/FACTOR/cmake-build-debug/
