--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ Chapter 12 - Controlling Flow/HANG/cmake-build-debug/
 Chapter 12 - Controlling Flow/FACTOR/.idea/
 
 Chapter 12 - Controlling Flow/FACTOR/cmake-build-debug/
+
+Chapter 12 - Controlling Flow/PIZZA4/.idea/
