--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ Chapter 12 - Controlling Flow/FACTOR/.idea/
 Chapter 12 - Controlling Flow/FACTOR/cmake-build-debug/
 
 Chapter 12 - Controlling Flow/PIZZA4/.idea/
+
+Chapter 12 - Controlling Flow/HELLOW2/.idea/
+
+Chapter 12 - Controlling Flow/HELLOW2/cmake-build-debug/
